packages/infrastructure/project/backend/load-balancers.tf
resource "aws_alb" "alb" {
  name            = "${var.namespace}-ALB-${var.environment}"
  security_groups = [aws_security_group.alb.id]
  subnets         = var.public_subnet_list
}
